@@ -1,3 +1,7 @@
+2019-12-23 Magnus Hagdorn
+ * piccolo3/client/PiccoloSpectrometer.py: only ask server for new current
+   time every 10 seconds otherwise use cached value
+
 2019-12-20 Magnus Hagdorn
  * piccolo3/client/PiccoloSpectrometer.py: add methods to set/get state of TEC
    and set/get target detector temperature
